Fixed styling on student cards to prevent overflow Edited student profile editing a bit to show new char limitation

--- a/src/styles/student-profile.scss
+++ b/src/styles/student-profile.scss
@@ -338,3 +338,8 @@
   font-weight:bold
 }
 
+.character-count {
+  font-size:.8em
+}
+ 
+
